# shard-token

./: Cargo.toml
airdrop/: Cargo.toml  README.md
contracts/airdrop/: Cargo.toml  README.md
contracts/airdrop/examples/: schema.rs
contracts/airdrop/schema/: config_response.json  instantiate_msg.json
contracts/airdrop/src/: contract.rs  state.rs  tests.rs
contracts/staking/: Cargo.toml  README.md
contracts/staking/examples/: schema.rs
contracts/staking/schema/: config_response.json  instantiate_msg.json
contracts/staking/src/: contract.rs  querier.rs  state.rs  testing.rs
contracts/token(erc20)/: download.wasm
contracts/token(erc20)/src/: contract.rs
